# Hello-Service-Monitoring

./: .env.example  .gitignore  README.md  alembic.ini  app.py  check_data.py  check_font.py  debug_disk_trend.py  debug_frontend.js  diagnose_network.py  final_test.py  init_db.py  main.py  pyproject.toml  requirements.txt  run.py  start.bat  start.sh  start_simple.bat  stop.bat  stop.sh  temp_functions.js  test_chinese_font.py  test_disk_chart.html  test_weekly_report_button.py  verify_fix.py
alembic/: env.py
alembic/versions/: 193c632a6c1b_initial_migration.py
app/: __init__.py  app.py  auth.py  collector.py  config.py  database.py  db_init.py  logger.py  models.py  remote_collector.py  routes.py  utils.py
app/api/: __init__.py  api_routes.py  routes.py
app/config/: __init__.py  config.py
app/database/: __init__.py  database_manager.py  db_init.py  models.py
app/exceptions/: __init__.py  app_exceptions.py
app/models/: __init__.py  models.py
app/monitoring/: __init__.py  alert.py  collector.py  scheduler.py  thresholds.py
db/: init_db.py  monitoring.db  reset_db.py
monitoring/: scheduler.py
static/: monitoring.js
templates/: base.html  index.html  server_detail.html  weekly_report.html
tests/: test_alert_deduplication.py  test_alert_optimization.py  test_connection_status.py  test_detailed_alert_deduplication.py  test_dns_resolution.py  test_email_config.py  test_email_sending.py  test_remote_connection.py  test_server_status.py  test_simple_email.py  test_smtp_connection.py  test_ssh_failure.py  test_status_display.py  test_weekly_report.py
(+33 files in other folders)
