[project]
name = "hello-service-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.1",
    "flask>=3.1.2",
    "loguru>=0.7.3",
    "plotly>=6.5.0",
    "psutil>=7.1.3",
    "sqlalchemy>=2.0.44",
]
